# adk_samples

./: README.md
samples/: README.md
samples/adk_lab/: .env-sample  README.md  deploy.py  deploy.sh  pyproject.toml  requirements_cloudrun.txt
samples/adk_lab/code_assistant/: agent.py
samples/adk_lab/deployment/: deploy_ae.py  validate_code_assist_agent_engine.py
samples/adk_lab/github_agent/: main.py
samples/adk_lab/stackexchange_agent/: main.py
samples/adk_lab/tools/: bug_database.py  code_manual.py  gdrive_upload.py
samples/adk_lab/utils/: proxy.py
samples/auto_insurance_agent/: README.md  deploy.py  pyproject.toml
samples/auto_insurance_agent/auto_insurance_agent/: agent.py
samples/auto_insurance_agent/tests/: test_agents.py
samples/bq_agent/: README.md  deploy.py  pyproject.toml
samples/bq_agent/bq_agent/: agent.py
samples/complaint_manager_agent/: .dockerignore  Readme.MD  deploy.py  deploy_as.sh  pyproject.toml  requirements.txt
samples/complaint_manager_agent/complaint_manager_agent/: agent.py  prompts.py  tools.py
samples/duplicate_invoice_agent/: Readme.MD  deploy.py  deploy_as.sh  pyproject.toml  requirements.txt
samples/duplicate_invoice_agent/duplicate_invoice_agent/: agent.py  prompts.py  tools.py
samples/financial-advisor/: README.md  deploy.py  deploy_as.sh  pyproject.toml
samples/imaging_agent/: deploy.py  deploy_as.sh  pyproject.toml
samples/imaging_agent/imaging_agent/: agent.py
samples/lab_analysis/: deploy.py  pyproject.toml  tdc_prompts.json
samples/mcp_bq_agent/: deploy.py  pyproject.toml
samples/mcp_sample/: deploy.py  pyproject.toml
samples/medical_agent/: deploy.py  pyproject.toml
samples/medical_pre_autorization/: .env-example  Readme.MD  deploy.py  deploy_as.sh  pyproject.toml  requirements.txt
samples/medical_pre_autorization/medical_pre_autorization/: agent.py  prompts.py
samples/medical_pre_autorization/medical_pre_autorization/sub_agents/: __init__.py
samples/medical_pre_autorization/medical_pre_autorization/sub_agents/data_analyst/: agent.py  prompts.py  tools.py
samples/medical_pre_autorization/medical_pre_autorization/sub_agents/information_extractor/: agent.py  prompts.py  tools.py
samples/molecule_agent/: README.md  deploy.py  deploy_as.sh  pyproject.toml  requirements.txt
samples/molecule_agent/molecule_agent/: agent.py  prompts.py  tools.py
samples/molecule_agent/molecule_agent/sub_agents/: __init__.py
samples/molecule_agent/molecule_agent/sub_agents/symptom_agent/: agent.py  prompts.py  tools.py
samples/molecule_agent/molecule_agent/sub_agents/tx_gemma_agent/: agent.py  prompts.py  tools.py
samples/mrna_agent/: deploy.py  pyproject.toml
samples/multi_tool_agent/: .env-example  README.md  deploy.py  requirements.txt
samples/notion_agent/: Dockerfile  deploy.py  main.py  pyproject.toml  requirements.txt
samples/pdf_summary_agent/: .env-example  README.md  deploy.py  deploy_as.sh  pyproject.toml  requirements.txt
samples/pdf_translator_fraud_agent/: README.md  deploy.py  pyproject.toml
samples/tarif_agent/: .env  Readme.MD  deploy.py  deploy_as.sh
samples/tariff_agent/: .env-example  pyproject.toml  requirements.txt
(+55 files in other folders)
