[project]
name = "medical_pre_autorization"
version = "0.0.1"
description = "Medical Pre-Authorization Agent using Google ADK"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-cloud-aiplatform[agent_engines]",
    "google-adk(>=1.22.0, <1.23.0)",
    "pandas",
    "db_dtypes",
    "dotenv",
    "pymupdf",
    "reportlab",
    "pdfplumber",
    "cloudpickle",
    "pydantic",
]
