[project]
name = "molecule-agent"
version = "0.1.0"
description = "customer service agent demo using Agent Framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-aiplatform[agent_engines]",
    "google-adk(>=1.18.0, <1.19.0)",
    "pandas",
    "db_dtypes",
    "cloudpickle",
    "dotenv"
]


[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "scikit-learn>=1.6.1",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
console_output_style = "progress"
addopts = "-vv -s --pdb"
testpaths = ["tests/"]
markers = [
    "unit"
]
log_level="DEBUG"
log_cli=true
log_auto_indent=true
log_cli_date_format="%Y-%m-%d %H:%M:%S"
log_cli_format ="[%(asctime)s] %(levelname)s (%(funcName)s) \t [%(pathname)s:%(lineno)d] %(message)s"
filterwarnings = [
    "ignore::UserWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
